--- a/Alphasoft/wwwroot/css/rx-card.css
+++ b/Alphasoft/wwwroot/css/rx-card.css
@@ -1,4 +1,3 @@
-@import url('https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900');
 
 .rx {
     position: relative;
@@ -60,6 +59,7 @@
     padding: 20px;
     transform: translateY(30px);
     transition: 0.5s;
+    text-align: center;
 }
 .rx_box:hover .rx_content {
     transform: translateY(-10px);
@@ -71,9 +71,10 @@
     right: 20px;
     margin: 0;
     padding: 0;
-    font-size: 10em;
+    font-size: 8em;
     color: rgba(255,255,255,.05);
     transition: 0.5s;
+    font-weight: 700;
 }
 
 .rx_box:hover .rx_content h2 {
@@ -83,8 +84,8 @@
 .rx_box .rx_content h3 {
     margin: 0 0 10px;
     padding: 0;
-    font-size: 24px;
-    font-weight: 500;
+    font-size: 20px;
+    font-weight: 700;
     color: #fff;
 }
 
@@ -92,7 +93,8 @@
     margin: 15px 0px;
     padding: 0;
     color: #fff;
-    font-size: 16px;
+    font-size: 12px;
+    font-weight: 600;
 }
 
 .rx_box .rx_content a {
