--- a/Alphasoft/Views/Shared/_ClientLayout.cshtml
+++ b/Alphasoft/Views/Shared/_ClientLayout.cshtml
@@ -63,6 +63,9 @@
     <!-- jQuery UI -->
     <link href="~/lib/jquery-ui-1.12.1/jquery-ui.min.css" rel="stylesheet" />
 
+    <!-- toaster -->
+    <link href="~/lib/CodeSeven-toastr-50092cc/build/toastr.min.css" rel="stylesheet" />
+
     <!-- rx -->
     <link href="~/css/rx-card.css" rel="stylesheet" />
     <link href="~/css/rx-form.css" rel="stylesheet" />
@@ -70,8 +73,6 @@
 
     <!-- Head Libs -->
     <script src="~/porto_7.4.0/vendor/modernizr/modernizr.min.js"></script>
-
-
 </head>
 <body>
     <div class="body">
@@ -322,7 +323,12 @@
     <!-- jQuery UI -->
     <script src="~/lib/jquery-ui-1.12.1/jquery-ui.min.js"></script>
 
+    <!-- toaster -->
+    <script src="~/lib/CodeSeven-toastr-50092cc/build/toastr.min.js"></script>
+
+    <!-- rx js -->
     <script src="~/js/ClientJS/clientLayout.js"></script>
+    <script src="~/js/ObjectifyForm.js"></script>
 
     @RenderSection("Styles", required: false)
     @RenderSection("Scripts", required: false)
