--- a/Alphasoft/Views/Home/Index.cshtml
+++ b/Alphasoft/Views/Home/Index.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Home";
 }
 
-<div class="slider-container light rev_slider_wrapper" style="height: 650px;">
+<div class="slider-container light rev_slider_wrapper" style="height: 650px;"  id="sec_0">
     <div id="revolutionSlider" class="slider rev_slider" data-version="5.4.8" data-plugin-revolution-slider data-plugin-options="{'delay': 9000, 'gridwidth': 1170, 'gridheight': 650, 'disableProgressBar': 'on', 'responsiveLevels': [4096,1200,992,500], 'navigation' : {'arrows': { 'enable': true, 'style': 'arrows-style-1 arrows-big arrows-dark' }, 'bullets': {'enable': false, 'style': 'bullets-style-1 bullets-color-primary', 'h_align': 'center', 'v_align': 'bottom', 'space': 7, 'v_offset': 70, 'h_offset': 0}}}">
         <ul>
             @if (Model.BannerList.Count() > 0)
@@ -97,7 +97,7 @@
                                data-x="center" data-hoffset="0"
                                data-y="center" data-voffset="75"
                                data-paddingtop="['15','15','15','30']"
-                               data-paddingbottom="['1','1','1','30']"
+                               data-paddingbottom="['15','15','15','30']"
                                data-paddingleft="['40','40','40','57']"
                                data-paddingright="['50','50','50','57']"
                                data-fontsize="['13','13','13','25']"
@@ -115,7 +115,7 @@
 
 <hr class="my-0">
 
-<section class="section bg-color-light border-0 m-0">
+<section class="section bg-color-light border-0 m-0" id="sec_1">
     <div class="container">
         <h2 class="font-weight-normal text-color-dark text-center text-7 pb-2 pt-5">Why <strong class="font-weight-extra-bold">Choose</strong> Us</h2>
         <div class="row text-center text-md-left mt-4 pt-5">
@@ -171,7 +171,7 @@
 
 <hr class="my-0">
 
-<div class="container-fluid">
+<div class="container-fluid"  id="sec_2">
     <div class="row py-5 my-5">
         <div class="col">
             <h2 class="font-weight-normal text-color-dark text-center text-7 pb-5">Our Honourable <strong class="font-weight-extra-bold">Clients</strong></h2>
@@ -192,7 +192,7 @@
 
 <hr class="my-0">
 
-<div class="container">
+<div class="container"  id="sec_3">
     <h2 class="font-weight-normal text-color-dark text-center text-7 pb-2 pt-5">Our <strong class="font-weight-extra-bold">Popular</strong> Products</h2>
     <div class="row justify-content-center py-4 my-5">
         <div class="col-lg-12">
@@ -227,7 +227,7 @@
 
 <hr class="my-0">
 
-<div class="container pt-5">
+<div class="container pt-5"  id="sec_4">
     <h2 class="font-weight-normal text-color-dark text-center text-7 pb-5">Our <strong class="font-weight-extra-bold">Hosting Plans</strong></h2>
     <div class="rx mb-5 mt-5 pb-3 pt-3">
         @foreach (var item in Model.HostingPlans)
@@ -254,7 +254,7 @@
 
 <hr class="my-0">
 
-<section class="section section-height-3 bg-color-grey m-0 border-0">
+<section class="section section-height-3 bg-color-grey m-0 border-0"  id="sec_5">
     <div class="container py-4">
         <h2 class="font-weight-normal text-color-dark text-center text-7 pb-2 pt-5">Our <strong class="font-weight-extra-bold">Products</strong></h2>
         <div class="row">
@@ -290,7 +290,7 @@
 
 <hr class="my-0">
 
-<section class="bg-color-light border-0 pt-5 mt-0">
+<section class="bg-color-light border-0 pt-5 mt-0"  id="sec_6">
     <div class="container pb-5 mb-5">
         <div class="row justify-content-center">
             <div class="col-md-9 col-lg-6">
@@ -336,7 +336,7 @@
 
 <hr class="my-0">
 
-<form id="newsletterForm" method="POST" class="mw-100">
+<form id="newsletterForm" method="POST" class="mw-100"  id="sec_7">
     <div class="input-group input-group-rounded">
         <input class="form-control form-control-sm bg-light px-4 text-3" placeholder="Email Address..." name="newsletterEmail" id="newsletterEmail" type="text">
         <span class="input-group-append">
