--- a/Alphasoft/Views/Home/_ContactUsForm.cshtml
+++ b/Alphasoft/Views/Home/_ContactUsForm.cshtml
@@ -1,25 +1,45 @@
-﻿<div class="rx_login">
+﻿@model ContactUs
+
+<div class="rx_login">
     <h2>Contact Us</h2>
-    <form>
+    <form id="contactUsFrom" autocomplete="off">
         <div class="input-group">
-            <input type="text" name="" required="required" />
+            <input type="text" asp-for="Name" required="required" />
             <span>Name</span>
         </div>
         <div class="input-group">
-            <input type="email" name="" required="required" />
+            <input type="email" asp-for="Email" required="required" />
             <span>Email</span>
         </div>
         <div class="input-group">
-            <input type="text" name="" required="required" />
+            <input type="text" asp-for="Phone" required="required" />
             <span>Phone</span>
         </div>
         <div class="input-group">
-            <textarea></textarea>
+            <textarea asp-for="Message" required="required"></textarea>
             <span>Your Message</span>
         </div>
         <div class="input-group">
             <input type="submit" value="Submit" />
         </div>
     </form>
-    @*<a href="#">Forgot Password <span>Click Here</span></a>*@
 </div>
+
+
+<script>
+    $("#contactUsFrom").on("submit", function (e) {
+        e.preventDefault();
+
+        let data = objectifyForm($(this).serializeArray());
+
+        $.ajax({
+            type: "POST",
+            url: "/Contactus/Create",
+            data: data,
+            success: function (response) {
+                toastr.success('We will contact with you soon. ', 'Thank You!');
+                $("#contactUsFormDiv").slideUp("2000", "swing");
+            }
+        });
+    });
+</script>
