--- a/Alphasoft/Views/Shared/_ClientLayout.cshtml
+++ b/Alphasoft/Views/Shared/_ClientLayout.cshtml
@@ -66,6 +66,10 @@
     <!-- toaster -->
     <link href="~/lib/CodeSeven-toastr-50092cc/build/toastr.min.css" rel="stylesheet" />
 
+    <!-- slick -->
+    <link href="~/lib/slick-1.8.1/slick/slick.css" rel="stylesheet" />
+    <link href="~/lib/slick-1.8.1/slick/slick-theme.css rel="stylesheet" />
+
     <!-- rx -->
     <link href="~/css/rx-card.css" rel="stylesheet" />
     <link href="~/css/rx-form.css" rel="stylesheet" />
@@ -325,6 +329,12 @@
 
     <!-- toaster -->
     <script src="~/lib/CodeSeven-toastr-50092cc/build/toastr.min.js"></script>
+
+    <!-- lazy load -->
+    <script src="~/lib/lazyload/lazyload.min.js"></script>
+
+    <!-- slick -->
+    <script src="~/lib/slick-1.8.1/slick/slick.min.js"></script>
 
     <!-- rx js -->
     <script src="~/js/ClientJS/clientLayout.js"></script>
