--- a/Alphasoft/Views/ClientView/_Section3.cshtml
+++ b/Alphasoft/Views/ClientView/_Section3.cshtml
@@ -1,29 +1,34 @@
-﻿@model List<Client>
+﻿@model List<Product>
 
-<div class="row py-5 my-5">
-    <div class="col">
-        <h2 class="font-weight-normal text-color-dark text-center text-7 pb-5">Our Honourable <strong class="font-weight-extra-bold">Clients</strong></h2>
-        <div id="ourClientsSection" data-slick='{"slidesToShow": 3, "slidesToScroll": 3}'>
-            @if (Model.Count() > 0)
-            {
-                foreach (var item in Model)
-                {
-                    <div style="padding: 0px 25px; height: 100px; width: 185px;">
-                        <img class="img-fluid opacity-2" src="@item.Logo" alt="" style="height: 100%; width: 100%; object-fit: contain;" />
-                    </div>
-                }
-            }
-        </div>
+<h2 class="font-weight-normal text-color-dark text-center text-7 pb-2 pt-5">Our <strong class="font-weight-extra-bold">Popular</strong> Products</h2>
+<div class="row justify-content-center py-4 my-5">
+    <div class="col-lg-12">
+        @if (Model.Count() > 0)
+        {
+            <div class="tabs tabs-bottom tabs-center tabs-simple">
+                <ul class="nav nav-tabs mb-3">
+                    @foreach (var item in Model)
+                    {
+                        <li class="nav-item appear-animation" data-appear-animation="fadeInLeftShorter" data-appear-animation-delay="200" style="width: 200px; height: 200px;">
+                            <a class="nav-link" href="#tabsNavigationSimpleIcons_@item.Id" data-toggle="tab">
+                                <img src="@item.Image" class="img-fluid hover-effect-2" alt="" style="width: 75px; height: 65px; object-fit: contain;">
+                                <h4 class="font-weight-bold text-color-dark text-3 mb-0 pb-0 mt-2">@item.Name</h4>
+                            </a>
+                        </li>
+                    }
+                </ul>
+
+                <div class="tab-content appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="300">
+                    @foreach (var item in Model)
+                    {
+                        <div class="tab-pane" id="tabsNavigationSimpleIcons_@item.Id">
+                            <div class="text-center">
+                                <p class="lead mb-4">@Html.Raw(item.Description)</p>
+                            </div>
+                        </div>
+                    }
+                </div>
+            </div>
+        }
     </div>
 </div>
-
-<script>
-    $("#ourClientsSection").slick({
-        autoplay: true,
-        arrows: false,
-        autoplaySpeed: 2000,
-        easing: 'linear',
-        infinite: true,
-        pauseOnHover: true
-    });
-</script>
