--- a/Alphasoft/Views/ClientView/_Section5.cshtml
+++ b/Alphasoft/Views/ClientView/_Section5.cshtml
@@ -1,4 +1,48 @@
-﻿
-@*
-    For more information on enabling MVC for empty projects, visit http://go.microsoft.com/fwlink/?LinkID=397860
-*@
+﻿@model List<Product>
+
+<div class="container py-4">
+    <h2 class="font-weight-normal text-color-dark text-center text-7 pb-2 pt-5">Our <strong class="font-weight-extra-bold">Products</strong></h2>
+    <div class="row">
+        @if (Model.Count() > 0)
+        {
+            <div class="owl-carousel owl-theme mb-0 pt-2" data-plugin-options="{'responsive': {'0': {'items': 1}, '476': {'items': 2}, '768': {'items': 4}, '992': {'items': 4}, '1200': {'items': 4}}, 'autoplay': true, 'autoplayTimeout': 3000, 'dots': true}">
+                @foreach (var item in Model)
+                {
+                    <div class="col-sm-12 col-md-12 mb-4 mb-md-0">
+                        <article>
+                            <div class="row" style="height: 170px;">
+                                <div class="col">
+                                    <a href="/ClientView/Product/@item.Id" class="text-decoration-none">
+                                        <img src="@item.Image" class="img-fluid hover-effect-2 mb-3" alt="" style="width: 100%; height: 100%; object-fit: contain;">
+                                    </a>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col">
+                                    <h5 class="text-color-primary text-4 mb-1">
+                                        <a href="/ClientView/Product/@item.Id">@item.Name</a>
+                                    </h5>
+                                    <p class="text-color-dark text-2 opacity-7 mb-3">@Html.Raw(item.ShortDescription)</p>
+                                    <a href="/ClientView/Product/@item.Id" class="read-more text-color-primary font-weight-semibold text-2">VIEW MORE <i class="fas fa-chevron-right text-3 ml-2"></i></a>
+                                </div>
+                            </div>
+
+                        </article>
+                    </div>
+                }
+            </div>
+        }
+    </div>
+</div>
+
+<script>
+    var owl = $('.owl-carousel');
+    owl.owlCarousel({
+        items: 4,
+        loop: true,
+        margin: 10,
+        autoplay: true,
+        autoplayTimeout: 1000,
+        autoplayHoverPause: true
+    });
+</script>
