--- a/Alphasoft/Views/ClientView/_Section7.cshtml
+++ b/Alphasoft/Views/ClientView/_Section7.cshtml
@@ -1,4 +1,10 @@
 ﻿
-@*
-    For more information on enabling MVC for empty projects, visit http://go.microsoft.com/fwlink/?LinkID=397860
-*@
+
+<form id="newsletterForm" method="POST" class="mw-100">
+    <div class="input-group input-group-rounded">
+        <input class="form-control form-control-sm bg-light px-4 text-3" placeholder="Email Address..." name="newsletterEmail" id="newsletterEmail" type="text">
+        <span class="input-group-append">
+            <button class="btn btn-primary text-color-light text-2 py-3 px-4" type="submit"><strong>SUBSCRIBE!</strong></button>
+        </span>
+    </div>
+</form>
