--- a/Alphasoft/Views/Home/Index.cshtml
+++ b/Alphasoft/Views/Home/Index.cshtml
@@ -115,167 +115,78 @@
 
 <hr class="my-0">
 
-<section class="section bg-color-light border-0 m-0" id="sec_2">
-
-</section>
-
-<hr class="my-0">
-
-<div class="container-fluid" id="sec_3">
+<section class="section bg-color-light border-0 m-0" id="sec_1">
     
-</div>
+</section>
 
 <hr class="my-0">
 
-<div class="container" id="sec_4">
-    <h2 class="font-weight-normal text-color-dark text-center text-7 pb-2 pt-5">Our <strong class="font-weight-extra-bold">Popular</strong> Products</h2>
-    <div class="row justify-content-center py-4 my-5">
-        <div class="col-lg-12">
-            <div class="tabs tabs-bottom tabs-center tabs-simple">
-                <ul class="nav nav-tabs mb-3">
-                    @foreach (var item in Model.ProductList)
-                    {
-                        <li class="nav-item appear-animation" data-appear-animation="fadeInLeftShorter" data-appear-animation-delay="200" style="width: 200px; height: 200px;">
-                            <a class="nav-link" href="#tabsNavigationSimpleIcons_@item.Id" data-toggle="tab">
-                                <img src="@item.Image" class="img-fluid hover-effect-2" alt="" style="width: 120px; height: 100px; object-fit: contain;">
-                                <h4 class="font-weight-bold text-color-dark text-3 mb-0 pb-0 mt-2">@item.Name</h4>
-                            </a>
-                        </li>
-                    }
-                </ul>
-
-                <div class="tab-content appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="300">
-                    @foreach (var item in Model.ProductList)
-                    {
-                        <div class="tab-pane" id="tabsNavigationSimpleIcons_@item.Id">
-                            <div class="text-center">
-                                <p class="lead mb-4">@Html.Raw(item.Description)</p>
-                            </div>
-                        </div>
-                    }
-                </div>
-            </div>
-
-        </div>
+<div class="container-fluid" id="sec_2">
+    <div class="loader">
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
     </div>
 </div>
 
 <hr class="my-0">
 
-<div class="container pt-5" id="sec_5">
-    <h2 class="font-weight-normal text-color-dark text-center text-7 pb-5">Our <strong class="font-weight-extra-bold">Hosting Plans</strong></h2>
-    <div class="rx mb-5 mt-5 pb-3 pt-3">
-        @foreach (var item in Model.HostingPlans)
-        {
-            <div class="rx_box">
-                <div class="rx_content">
-                    <h3 style="margin-bottom: 42px;">
-                        <span style="border-bottom: 1px solid #eee; padding-bottom: 7px;">@item.Name</span>
-                    </h3>
-                    <p>Amount of space: @item.Space</p>
-                    <p>Bandwidth: @item.Bandwidth</p>
-                    <p>Domain: @item.Domain</p>
-                    <p>Subdomain: @item.SubDomain</p>
-                    <p>Alias: @item.Alias</p>
-                    <p>Email: @item.Email</p>
-                    <p>CPanel: @item.CPanel</p>
-                    <h3 style="margin: 22px 0px;">@item.Price &#2547; / @item.PriceUnit</h3>
-                    <a href="#"><b>Get @item.Name</b></a>
-                </div>
-            </div>
-        }
+<div class="container" id="sec_3">
+    <div class="loader">
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
     </div>
 </div>
 
 <hr class="my-0">
 
-<section class="section section-height-3 bg-color-grey m-0 border-0" id="sec_6">
-    <div class="container py-4">
-        <h2 class="font-weight-normal text-color-dark text-center text-7 pb-2 pt-5">Our <strong class="font-weight-extra-bold">Products</strong></h2>
-        <div class="row">
-            <div class="owl-carousel owl-theme mb-0 pt-2" data-plugin-options="{'responsive': {'0': {'items': 1}, '476': {'items': 2}, '768': {'items': 4}, '992': {'items': 4}, '1200': {'items': 4}}, 'autoplay': true, 'autoplayTimeout': 3000, 'dots': true}">
-                @foreach (var item in Model.ProductList)
-                {
-                    <div class="col-sm-12 col-md-12 mb-4 mb-md-0">
-                        <article>
-                            <div class="row" style="height: 170px;">
-                                <div class="col">
-                                    <a href="/ClientView/Product/@item.Id" class="text-decoration-none">
-                                        <img src="@item.Image" class="img-fluid hover-effect-2 mb-3" alt="" style="width: 100%; height: 100%; object-fit: contain;">
-                                    </a>
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col">
-                                    <h5 class="text-color-primary text-4 mb-1">
-                                        <a href="/ClientView/Product/@item.Id">@item.Name</a>
-                                    </h5>
-                                    <p class="text-color-dark text-2 opacity-7 mb-3">@Html.Raw(item.ShortDescription)</p>
-                                    <a href="/ClientView/Product/@item.Id" class="read-more text-color-primary font-weight-semibold text-2">VIEW MORE <i class="fas fa-chevron-right text-3 ml-2"></i></a>
-                                </div>
-                            </div>
+<div class="container pt-5" id="sec_4">
+    <div class="loader">
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+    </div>
+</div>
 
-                        </article>
-                    </div>
-                }
-            </div>
-        </div>
+<hr class="my-0">
+
+<section class="section section-height-3 bg-color-grey m-0 border-0" id="sec_5">
+    <div class="loader">
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
     </div>
 </section>
 
 <hr class="my-0">
 
-<section class="bg-color-light border-0 pt-5 mt-0" id="sec_7">
-    <div class="container pb-5 mb-5">
-        <div class="row justify-content-center">
-            <div class="col-md-9 col-lg-6">
-                <h2 class="font-weight-normal text-color-dark text-center text-8 mb-4"><strong class="font-weight-extra-bold">Contact</strong> Us</h2>
-                <p class="text-4 opacity-8 text-center mb-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus blandit massa enim. Nullam id varius nunc. Vivamus bibendum</p>
-                <form id="contactForm" class="contact-form form-style-3" action="php/contact-form.php" method="POST" novalidate="novalidate">
-                    <div class="contact-form-success alert alert-success d-none" id="contactSuccess">
-                        Message has been sent to us.
-                    </div>
-
-                    <div class="contact-form-error alert alert-danger d-none" id="contactError">
-                        Error sending your message.
-                        <span class="mail-error-message text-1 d-block" id="mailErrorMessage"></span>
-                    </div>
-
-                    <input type="hidden" value="Contact Form" name="subject" id="subject">
-                    <div class="form-row">
-                        <div class="form-group col-md-6 pr-md-2">
-                            <input type="text" value="" data-msg-required="Please enter your name." maxlength="100" class="form-control" placeholder="Your Name..." name="name" id="name" required="">
-                        </div>
-                        <div class="form-group col-md-6 pl-md-2">
-                            <input type="text" value="" data-msg-required="Please enter your phone." maxlength="100" class="form-control" placeholder="Your Phone..." name="phone" id="phone" required="">
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <input type="email" value="" data-msg-required="Please enter your email address." data-msg-email="Please enter a valid email address." maxlength="100" class="form-control" placeholder="Your Email Address..." name="email" id="email" required="">
-                    </div>
-                    <div class="form-row">
-                        <div class="form-group col">
-                            <textarea maxlength="5000" data-msg-required="Please enter your message." rows="4" class="form-control" placeholder="Your Message..." name="message" id="message" required=""></textarea>
-                        </div>
-                    </div>
-                    <div class="form-row">
-                        <div class="form-group col text-center">
-                            <input type="submit" value="SUBMIT" class="btn btn-primary font-weight-semibold text-3 px-5 btn-py-2" data-loading-text="Loading...">
-                        </div>
-                    </div>
-                </form>
-            </div>
-        </div>
+<section class="bg-color-light border-0 pt-5 mt-0" id="sec_6">
+    <div class="loader">
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
     </div>
 </section>
 
 <hr class="my-0">
 
-<form id="newsletterForm" method="POST" class="mw-100" id="sec_8">
-    <div class="input-group input-group-rounded">
-        <input class="form-control form-control-sm bg-light px-4 text-3" placeholder="Email Address..." name="newsletterEmail" id="newsletterEmail" type="text">
-        <span class="input-group-append">
-            <button class="btn btn-primary text-color-light text-2 py-3 px-4" type="submit"><strong>SUBSCRIBE!</strong></button>
-        </span>
+<div id="sec_7">
+    <div class="loader">
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
     </div>
-</form>
+</div>
