--- a/Alphasoft/Views/ClientView/_Section4.cshtml
+++ b/Alphasoft/Views/ClientView/_Section4.cshtml
@@ -18,7 +18,7 @@
                     <p>Alias: @item.Alias</p>
                     <p>Email: @item.Email</p>
                     <p>CPanel: @item.CPanel</p>
-                    <h3 style="margin: 22px 0px;">@item.Price &#2547; / @item.PriceUnit</h3>
+                    <h3 style="margin: 22px 0px;">@item.YearlyPrice &#2547; / @item.PriceUnit</h3>
                     <a href="#"><b>Get @item.Name</b></a>
                 </div>
             </div>
