--- a/Alphasoft/Views/ClientView/_Section1.cshtml
+++ b/Alphasoft/Views/ClientView/_Section1.cshtml
@@ -1,8 +1,8 @@
 ﻿@model List<ChooseUs>
 
 <div class="container">
-    <h2 class="font-weight-normal text-color-dark text-center text-7 pb-2 pt-5">Why <strong class="font-weight-extra-bold">Choose</strong> Us</h2>
-    <div class="row text-center text-md-left mt-4 pt-5">
+    <h2 class="font-weight-normal text-color-dark text-center text-7 pb-2 pt-4">Why <strong class="font-weight-extra-bold">Choose</strong> Us</h2>
+    <div class="row text-center text-md-left">
         <div class="owl-carousel owl-theme mb-0 pt-5" data-plugin-options="{'responsive': {'0': {'items': 1}, '476': {'items': 2}, '768': {'items': 2}, '992': {'items': 3}, '1200': {'items': 3}}, 'autoplay': true, 'autoplayTimeout': 3000, 'dots': false}">
             @if (Model.Count() > 0)
             {
@@ -66,7 +66,8 @@
         loop: true,
         margin: 10,
         autoplay: true,
-        autoplayTimeout: 12000,
-        autoplayHoverPause: true
+        autoplayTimeout: 5000,
+        autoplayHoverPause: true,
+        dots: false
     });
 </script>
