--- a/Alphasoft/Views/ClientView/_Section2.cshtml
+++ b/Alphasoft/Views/ClientView/_Section2.cshtml
@@ -26,6 +26,7 @@
         margin: 10,
         autoplay: true,
         autoplayTimeout: 1000,
-        autoplayHoverPause: true
+        autoplayHoverPause: true,
+        dots: false
     });
 </script>
