--- a/Alphasoft/Views/HostingPlans/_Create.cshtml
+++ b/Alphasoft/Views/HostingPlans/_Create.cshtml
@@ -46,9 +46,14 @@
                     <span asp-validation-for="CPanel" class="text-danger"></span>
                 </div>
                 <div class="form-group">
-                    <label asp-for="Price"></label>
-                    <input asp-for="Price" type="text" class="form-control" />
-                    <span asp-validation-for="Price" class="text-danger"></span>
+                    <label asp-for="MonthlyPrice"></label>
+                    <input asp-for="MonthlyPrice" type="text" class="form-control" />
+                    <span asp-validation-for="MonthlyPrice" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="YearlyPrice"></label>
+                    <input asp-for="YearlyPrice" type="text" class="form-control" />
+                    <span asp-validation-for="YearlyPrice" class="text-danger"></span>
                 </div>
                 <div class="form-group">
                     <label asp-for="PriceUnit"></label>
