--- a/Alphasoft/Views/Menus/_Edit.cshtml
+++ b/Alphasoft/Views/Menus/_Edit.cshtml
@@ -2,6 +2,7 @@
 
 <form id="menu-editForm" class="createForm">
     <div class="row">
+        <input asp-for="Id" type="hidden" class="form-control" />
         <div class="col-md-6">
             <div class="form-group">
                 <label asp-for="Name"></label>
@@ -44,8 +45,8 @@
 
     $("#menu-editForm").on("submit", function (e) {
         e.preventDefault();
+
         let data = objectifyForm($(this).serializeArray());
-        console.log(data);
 
         $.ajax({
             url: "/Menus/Edit",
