--- a/Alphasoft/Views/_ViewImports.cshtml
+++ b/Alphasoft/Views/_ViewImports.cshtml
@@ -3,4 +3,5 @@
 @using Alphasoft.ViewModels
 @using Alphasoft.ViewModels.ClientViewModels
 @using Microsoft.EntityFrameworkCore;
+@using Alphasoft.Constants;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
