--- a/Alphasoft/Views/Shared/_ClientLayout.cshtml
+++ b/Alphasoft/Views/Shared/_ClientLayout.cshtml
@@ -158,26 +158,109 @@
                                                     {
                                                         subMenus = menuList.Where(x => x.ParentId == menu.Id).ToList();
 
-                                                        <li class="dropdown dropdown-full-color dropdown-light">
-                                                            <a class="dropdown-item dropdown-toggle" asp-controller="@menu.ControllerName" asp-action="@menu.ActionName">
-                                                                @menu.Name
-                                                            </a>
-                                                            @if (subMenus.Count() > 0)
-                                                            {
+                                                        if (menu.DropdownType == "big")
+                                                        {
+                                                            <li class="dropdown dropdown-full-color dropdown-light dropdown-mega">
+                                                                <a class="dropdown-item dropdown-toggle" href="elements.html">
+                                                                    Software
+                                                                    <i class="fas fa-chevron-down"></i>
+                                                                </a>
                                                                 <ul class="dropdown-menu">
-
-                                                                    @foreach (var subMenu in subMenus)
-                                                                    {
-                                                                        <li>
-                                                                            <a class="dropdown-item" asp-controller="@subMenu.ControllerName" asp-action="@subMenu.ActionName">
-                                                                                @subMenu.Name
-                                                                            </a>
-                                                                        </li>
-                                                                    }
+                                                                    <li>
+                                                                        <div class="dropdown-mega-content">
+                                                                            <div class="row">
+                                                                                <div class="col-lg-3">
+                                                                                    <span class="dropdown-mega-sub-title">Elements 1</span>
+                                                                                    <ul class="dropdown-mega-sub-nav">
+                                                                                        <li><a class="dropdown-item" href="elements-accordions.html">Accordions</a></li>
+                                                                                        <li><a class="dropdown-item" href="elements-toggles.html">Toggles</a></li>
+                                                                                        <li><a class="dropdown-item" href="elements-tabs.html">Tabs</a></li>
+                                                                                        <li><a class="dropdown-item" href="elements-icons.html">Icons</a></li>
+                                                                                        <li><a class="dropdown-item" href="elements-icon-boxes.html">Icon Boxes</a></li>
+                                                                                        <li><a class="dropdown-item" href="elements-carousels.html">Carousels</a></li>
+                                                                                        <li><a class="dropdown-item" href="elements-modals.html">Modals</a></li>
+                                                                                        <li><a class="dropdown-item" href="elements-lightboxes.html">Lightboxes</a></li>
+                                                                                        <li><a class="dropdown-item" href="elements-word-rotator.html">Word Rotator</a></li>
+                                                                                        <li><a class="dropdown-item" href="elements-before-after.html">Before / After</a></li>
+                                                                                        <li><a class="dropdown-item" href="elements-360-image-viewer.html">360º Image Viewer</a></li>
+                                                                                    </ul>
+                                                                                </div>
+                                                                                <div class="col-lg-3">
+                                                                                    <span class="dropdown-mega-sub-title">Elements 2</span>
+                                                                                    <ul class="dropdown-mega-sub-nav">
+                                                                                        <li><a class="dropdown-item" href="elements-buttons.html">Buttons</a></li>
+                                                                                        <li><a class="dropdown-item" href="elements-badges.html">Badges</a></li>
+                                                                                        <li><a class="dropdown-item" href="elements-lists.html">Lists</a></li>
+                                                                                        <li><a class="dropdown-item" href="elements-cards.html">Cards</a></li>
+                                                                                        <li><a class="dropdown-item" href="elements-image-gallery.html">Image Gallery</a></li>
+                                                                                        <li><a class="dropdown-item" href="elements-image-frames.html">Image Frames</a></li>
+                                                                                        <li><a class="dropdown-item" href="elements-image-hotspots.html">Image Hotspots</a></li>
+                                                                                        <li><a class="dropdown-item" href="elements-testimonials.html">Testimonials</a></li>
+                                                                                        <li><a class="dropdown-item" href="elements-blockquotes.html">Blockquotes</a></li>
+                                                                                        <li><a class="dropdown-item" href="elements-sticky-elements.html">Sticky Elements</a></li>
+                                                                                    </ul>
+                                                                                </div>
+                                                                                <div class="col-lg-3">
+                                                                                    <span class="dropdown-mega-sub-title">Elements 3</span>
+                                                                                    <ul class="dropdown-mega-sub-nav">
+                                                                                        <li><a class="dropdown-item" href="elements-typography.html">Typography</a></li>
+                                                                                        <li><a class="dropdown-item" href="elements-call-to-action.html">Call to Action</a></li>
+                                                                                        <li><a class="dropdown-item" href="elements-pricing-tables.html">Pricing Tables</a></li>
+                                                                                        <li><a class="dropdown-item" href="elements-tables.html">Tables</a></li>
+                                                                                        <li><a class="dropdown-item" href="elements-progressbars.html">Progress Bars</a></li>
+                                                                                        <li><a class="dropdown-item" href="elements-process.html">Process</a></li>
+                                                                                        <li><a class="dropdown-item" href="elements-counters.html">Counters</a></li>
+                                                                                        <li><a class="dropdown-item" href="elements-countdowns.html">Countdowns</a></li>
+                                                                                        <li><a class="dropdown-item" href="elements-sections-parallax.html">Sections &amp; Parallax</a></li>
+                                                                                        <li><a class="dropdown-item" href="elements-tooltips-popovers.html">Tooltips &amp; Popovers</a></li>
+                                                                                    </ul>
+                                                                                </div>
+                                                                                <div class="col-lg-3">
+                                                                                    <span class="dropdown-mega-sub-title">Elements 4</span>
+                                                                                    <ul class="dropdown-mega-sub-nav">
+                                                                                        <li><a class="dropdown-item" href="elements-headings.html">Headings</a></li>
+                                                                                        <li><a class="dropdown-item" href="elements-dividers.html">Dividers</a></li>
+                                                                                        <li><a class="dropdown-item" href="elements-animations.html">Animations</a></li>
+                                                                                        <li><a class="dropdown-item" href="elements-medias.html">Medias</a></li>
+                                                                                        <li><a class="dropdown-item" href="elements-maps.html">Maps</a></li>
+                                                                                        <li><a class="dropdown-item" href="elements-arrows.html">Arrows</a></li>
+                                                                                        <li><a class="dropdown-item" href="elements-star-ratings.html">Star Ratings</a></li>
+                                                                                        <li><a class="dropdown-item" href="elements-alerts.html">Alerts</a></li>
+                                                                                        <li><a class="dropdown-item" href="elements-posts.html">Posts</a></li>
+                                                                                        <li><a class="dropdown-item" href="elements-forms-basic-contact.html">Forms</a></li>
+                                                                                    </ul>
+                                                                                </div>
+                                                                            </div>
+                                                                        </div>
+                                                                    </li>
                                                                 </ul>
-                                                            }
-                                                        </li>
+                                                            </li>
+                                                        }
+                                                        else
+                                                        {
+                                                            <li class="dropdown dropdown-full-color dropdown-light">
+                                                                <a class="dropdown-item dropdown-toggle" asp-controller="@menu.ControllerName" asp-action="@menu.ActionName">
+                                                                    @menu.Name
+                                                                </a>
+                                                                @if (subMenus.Count() > 0)
+                                                                {
+                                                                    <ul class="dropdown-menu">
+
+                                                                        @foreach (var subMenu in subMenus)
+                                                                        {
+                                                                            <li>
+                                                                                <a class="dropdown-item" asp-controller="@subMenu.ControllerName" asp-action="@subMenu.ActionName">
+                                                                                    @subMenu.Name
+                                                                                </a>
+                                                                            </li>
+                                                                        }
+                                                                    </ul>
+                                                                }
+                                                            </li>
+                                                        }
                                                     }
+
+
                                                 </ul>
                                             </nav>
                                         </div>
